# cargo-rustflags

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
tests/: config.cli  include.toml  other.toml  simple.toml  target.toml  wrapper.cli
