[package]
name = "cargo-rustflags"
version = "0.3.1"
edition = "2021"
description = "Resolve effective RUSTFLAGS for a cargo target"
license = "MIT"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
readme = "README.md"
repository = "https://github.com/mmastrac/cargo-rustflags"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "cargo-rustflags"
path = "src/main.rs"

[dependencies]
